--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,15 +22,16 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - name: Set up Python ${{ matrix.python-version }}
+    - name: Set up Python ${{ matrix.python_version }}
       uses: actions/setup-python@v4
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: ${{ matrix.python_version }}
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install pytest
+        pip install torch==${{ matrix.pytorch_version }}
         pip install -r requirements.txt
 
     - name: Run tests
